--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,11 @@
     "version": "1.0",
     "description": "Personal AI Tracker 🤖",
     "action": {
+      "default_icon": {
+        "16": "img16.png",
+        "48": "img16.png",
+        "128": "img16.png"
+      },
       "default_popup": "popup.html"
     },
     "permissions": ["activeTab"],
@@ -17,5 +22,8 @@
       "service_worker": "background.js"
     },
     "icons": {
+      "16": "img16.png",
+      "48": "img16.png",
+      "128": "img16.png"
     }
   }
