--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "TrackTools",
     "version": "1.0",
-    "description": "Personal AI Tracker 🤖",
+    "description": "Simple Chrome Extension Tracker",
     "permissions": [
       "activeTab",
       "cookies"
